--- a/export_doc/static/description/index.html
+++ b/export_doc/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced">
     <div class="oe_span12">
-      <h2 class="oe_slogan" style="color:#875A7B;">DOC Export</h2>
+      <h2 class="oe_slogan" style="color:#875A7B;">Odoo -> MS Word (*.doc) export</h2>
       <h3 class="oe_slogan">Export any data to MS Words *.doc format</h3>
     </div>
   </div>
