ADD Pivot by hour module

--- a/pivot_by_hour/static/description/index.html
+++ b/pivot_by_hour/static/description/index.html
@@ -1,8 +1,8 @@
 <section class="oe_container">
   <div class="oe_row oe_spaced">
     <div class="oe_span12">
-      <h2 class="oe_slogan" style="color:#875A7B;">DOC Export</h2>
-      <h3 class="oe_slogan">Export any data to MS Words *.doc format</h3>
+      <h2 class="oe_slogan" style="color:#875A7B;">Pivot by hour</h2>
+      <h3 class="oe_slogan">Expand dates by hours</h3>
     </div>
   </div>
 </section>
@@ -12,38 +12,11 @@
  	<h3 class="oe_slogan">How to use</h3>
     <div class="oe_span12 text-center">
       <p class="oe_mt32">
- 		<font size="3px">Open any tree view<font>
+ 		<font size="3px">Open any pivot view and select hours criteria<font>
       </p>
     </div>
     <div class="oe_row_img oe_centered">
-      <img class="oe_demo oe_picture oe_screenshot" src="partners.png"/>
-    </div>
-   </div>
-</section>
-
-<section class="oe_container">
-  <div class="oe_row oe_spaced">
-    <div class="oe_span12 text-center">
-      <p class="oe_mt32">
- 		<font size="3px">Select rows to export. Press [Action] -> [Export].
-</font>
-      </p>
-    </div>
-    <div class="oe_row_img oe_centered">
-      <img class="oe_demo oe_picture oe_screenshot" src="select.png"/>
-    </div>
-   </div>
-</section>
-
-<section class="oe_container oe_dark">
-  <div class="oe_row oe_spaced">
-    <div class="oe_span12 text-center">
-      <p class="oe_mt32">
- 		<font size="3px">Select DOC radio button. Add fields for export. Press [Export To File]. Save created doc document somewhere.</font>
-      </p>
-    </div>
-    <div class="oe_row_img oe_centered">
-      <img class="oe_demo oe_picture oe_screenshot" src="export.png"/>
+      <img class="oe_demo oe_picture oe_screenshot" src="main.png"/>
     </div>
    </div>
 </section>
